# k3-tree-map-algebra

./: CMakeLists.txt  LICENSE  README.md  clean.sh  compile.sh
example/: build.sh  test.sh
example/data/: alcoy_5_300k.laz  k3example1  k3example2  k3example3  k3example4  puntos.txt
include/: k3_tree.hpp  k3_tree_base.hpp  k3_tree_level.hpp  k3_tree_points.hpp
include/LIDAR/: k3_tree_LIDAR.hpp  k3_tree_LIDAR_points.hpp
include/others/: conceptual_node.hpp  k3_tree_LIDAR.hpp  k3_tree_no_opt.hpp
include/util/: file.hpp
src/: k3_tree_encode.cpp  k3_tree_get.cpp  k3_tree_get_region.cpp
src/LIDAR/: k3_tree_LIDAR_encode.cpp  k3_tree_LIDAR_get.cpp  k3_tree_LIDAR_get_region.cpp  k3_tree_LIDAR_get_region_int.cpp
src/map_algebra/: sum_by_scalar.cpp  threshold.cpp
src/others/: create_random_file.cpp  k3_tree_encode.cpp  k3_tree_encode_lidar.cpp  k3_tree_get_LIDAR.cpp  k3_tree_get_region_LIDAR.cpp
src/test/: create_get_queries.cpp  create_get_region_queries.cpp  create_random_file.cpp  test_get_region.cpp  test_k3_tree_LIDAR.cpp
